--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,8 +84,8 @@ h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #5846f9;
-  border-top-color: #e7e4fe;
+  border: 6px solid #ec407a;
+  border-top-color: #ff80ab;
   border-radius: 50%;
   width: 60px;
   height: 60px;
