--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1342,7 +1342,7 @@ section {
 
 .contact .info-box i {
   font-size: 32px;
-  color: #5846f9;
+  color: #ec407a;
   border-radius: 50%;
   padding: 8px;
 }
